--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html, body {
 .gridItem {
   font-family: coolvetica;
   font-size: 3vw;
+  cursor: pointer;
 }
 
 .grid-item-1 .flip-card-front {
@@ -154,4 +155,26 @@ html, body {
   /*color: black;
   background-color: rgba(255,255,255,0.1);*/
   transform: rotateY(180deg);
+}
+
+.extraInfo {
+  height: 0px;
+  overflow: hidden;
+  grid-column-start: 1;
+  grid-column-end: span 3;
+  transition: height 0.5s;
+}
+
+.visibleInfo {
+  height: 30vh;
+}
+
+#extraInfo-1 {
+  color: #E56B6F;
+  font-size: 2vw;
+}
+
+#extraInfo-2 {
+  color: #F6AE2D;
+  font-size: 2vw;
 }
