--- a/style.css
+++ b/style.css
@@ -183,3 +183,33 @@ html, body {
   color: #BFDCEA;
   font-size: 2vw;
 }
+
+#extraInfo-4 {
+  color: #57CC99;
+  font-size: 2vw;
+}
+
+#extraInfo-5 {
+  color: #FAE0E4;
+  font-size: 2vw;
+}
+
+#extraInfo-6 {
+  color: #BBD0FF;
+  font-size: 2vw;
+}
+
+#extraInfo-7 {
+  color: #C8B6FF;
+  font-size: 2vw;
+}
+
+#extraInfo-8 {
+  color: #A2D2FF;
+  font-size: 2vw;
+}
+
+#extraInfo-9 {
+  color: #CDB4DB;
+  font-size: 2vw;
+}
